After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667743 - Topup menu item not displayed when re-connecting account
Topup menu item not displayed when re-connecting account
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
2.33.x
Other Linux
: Normal normal
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2012-01-12 10:40 UTC by Guillaume Desmottes
Modified: 2012-01-12 12:18 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
roster-window: factor out add_account() (2.91 KB, patch)
2012-01-12 11:26 UTC, Guillaume Desmottes
committed Details | Review
roster-window: watch for TpAccount:connection changes (1.47 KB, patch)
2012-01-12 11:26 UTC, Guillaume Desmottes
none Details | Review
roster-window: watch for TpAccount:connection changes (2.36 KB, patch)
2012-01-12 12:15 UTC, Guillaume Desmottes
committed Details | Review

Description Guillaume Desmottes 2012-01-12 10:40:20 UTC
- Start empathy with a account supporting topup connected: menu is displayed
- Disconnect and reconnect the account
- Menu is not displayed
Comment 1 Guillaume Desmottes 2012-01-12 11:26:29 UTC
Created attachment 205075 [details] [review]
roster-window: factor out add_account()

Also fix a stupid bug where roster_window_account_removed_cb() was called on a
valid account in roster_window_account_validity_changed_cb().
Comment 2 Guillaume Desmottes 2012-01-12 11:26:32 UTC
Created attachment 205076 [details] [review]
roster-window: watch for TpAccount:connection changes

The account being connected isn't longer enough to ensure that its
TpConnection is defined.
Comment 3 Xavier Claessens 2012-01-12 11:32:56 UTC
You can remove roster_window_remove_balance_action() and roster_window_setup_balance() from roster_window_connection_changed_cb() now I think.

Also in the notify::connection cb, shouldn't you call roster_window_remove_balance_action() if the property becomes NULL instead of roster_window_setup_balance() ?
Comment 4 Guillaume Desmottes 2012-01-12 12:15:10 UTC
Created attachment 205087 [details] [review]
roster-window: watch for TpAccount:connection changes

The account being connected isn't longer enough to ensure that its
TpConnection is defined.
Comment 5 Guillaume Desmottes 2012-01-12 12:15:27 UTC
(In reply to comment #3)
> You can remove roster_window_remove_balance_action() and
> roster_window_setup_balance() from roster_window_connection_changed_cb() now I
> think.

> Also in the notify::connection cb, shouldn't you call
> roster_window_remove_balance_action() if the property becomes NULL instead of
> roster_window_setup_balance() ?

Right, better to keep it symetric; done.
Comment 6 Xavier Claessens 2012-01-12 12:16:41 UTC
Looks good now. +1
Comment 7 Guillaume Desmottes 2012-01-12 12:18:02 UTC
Attachment 205075 [details] pushed as 4fcf2a8 - roster-window: factor out add_account()
Attachment 205087 [details] pushed as ddb4928 - roster-window: watch for TpAccount:connection changes