roster-window: factor out add_account()

Also fix a stupid bug where roster_window_account_removed_cb() was called on a
valid account in roster_window_account_validity_changed_cb().

https://bugzilla.gnome.org/show_bug.cgi?id=667743